# NeuPIMs

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  brun.sh  build.sh
configs/: README.md  systolic_ws_128x128_dev.json
configs/memory_configs/: dram.json  neupims.json  newton.json
configs/model_configs/: gpt3-13B.json  gpt3-175B.json  gpt3-30B.json  gpt3-7B.json
configs/system_configs/: npu-fusion.json  npupim.json  sub-batch-off.json  sub-batch-on.json
request-traces/clb/: share-gpt2-bs512-ms7B-tp4-clb-0.csv  share-gpt2-bs512-ms7B-tp4-clb-1.csv  share-gpt2-bs512-ms7B-tp4-clb-2.csv  share-gpt2-bs512-ms7B-tp4-clb-3.csv  share-gpt2-bs512-ms7B-tp4-clb-4.csv  share-gpt2-bs512-ms7B-tp4-clb-5.csv  share-gpt2-bs512-ms7B-tp4-clb-6.csv  share-gpt2-bs512-ms7B-tp4-clb-7.csv  share-gpt2-bs512-ms7B-tp4-clb-8.csv  share-gpt2-bs512-ms7B-tp4-clb-9.csv
request-traces/rr/: share-gpt2-bs512-ms7B-tp4-rr-0.csv  (+9 more)
src/: BatchedRequest.cc  BatchedRequest.h  Common.cc  Common.h  Core.cc  Core.h  Dram.cc  Dram.h  Interconnect.cc  Interconnect.h  Logger.h  Mapping.cc  Mapping.h  Model.cc  Model.h  ModelProgram.cc  ModelProgram.h  NeuPIMSCore.cc  NeuPIMSCore.h  NeuPIMSystolicWS.cc  NeuPIMSystolicWS.h  RequestGenerator.cc  RequestGenerator.h  SimulationConfig.h  Simulator.cc  Simulator.h  Sram.cc  Sram.h  StageProgram.cc  StageProgram.h  Stat.h  Stats.cpp  SystolicOS.cc  SystolicOS.h  SystolicWS.cc  SystolicWS.h  Tensor.cc  Tensor.h  Tensor2D.h  main.cc
trace-generator/: README.md  channel_load_balancing.py  get_distributions.py  test.ipynb  tokenize_stat.py
(+68 files in other folders)
